border-end added for second project

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="project pb-4">
             <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
-                <div class="col-xl-6 border-start">
+                <div class="col-xl-6 border-end">
                   <div class="card-body">
                     <h4 class="card-title">2Bridal</h4>
                     <p class="card-text">Marketplace app for renting used designer wedding dresses. Routinely deployed and debugged 2Bridal on Heroku. Used
