--- a/index.html
+++ b/index.html
@@ -78,6 +78,68 @@
           <div class="project pb-4">
             <div class="card shadow-sm mb-4" data-aos="fade-up">
               <div class="row g-0">
+                <div class="col-xl-6 border-end">
+                  <div class="card-body">
+                    <h4 class="card-title">My Japan Travel Journal</h4>
+                    <p class="card-text">Marketplace app for renting used designer wedding dresses. Routinely deployed and
+                      debugged 2Bridal on Heroku. Used
+                      JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the
+                      JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their
+                      rented dress.
+                      Created a function to calculate the cost of a dress from its rental period.</p>
+                    <h5>Built with:</h5>
+                    <div id="devcon" data-aos="zoom-in">
+                      <i class="devicon-rails-plain-wordmark" id="rails"></i>
+                      <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
+                      <i class="devicon-heroku-original-wordmark" id="heroku"></i>
+                      <i class="devicon-javascript-plain" id="javascript"></i>
+                    </div>
+                    <div class="mt-3">
+                      <a href="https://two-bridal.herokuapp.com/" target="_blank" rel="noreferrer" class="button-green">App</a>
+                      <a href="https://github.com/angrysun/two-bridal" target="_blank" rel="noreferrer"
+                        class="button-green">Code</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-6" id="start">
+                  <div id="carouselExampleIndicatorsTwo" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/images/2bridal.png" class="d-block w-100" alt="2bridal">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/2bridal3.png" class="d-block w-100" alt="2bridal3">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/images/2bridal4.png" class="d-block w-100" alt="2bridal4">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsTwo"
+                      data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsTwo"
+                      data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project pb-4">
+            <div class="card shadow-sm mb-4" data-aos="fade-up">
+              <div class="row g-0">
                 <div class="col-xl-6">
                   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
