--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                       Created a function to calculate the cost of a dress from its rental period.</p>
                     <h5>Built with:</h5>
                     <div id="devcon" data-aos="zoom-in">
-                      <i class="devicon-rails-plain-wordmark" id="rails"></i>
+                      <i class="devicon-react-original-wordmark" id="react"></i>
                       <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
                       <i class="devicon-heroku-original-wordmark" id="heroku"></i>
                       <i class="devicon-javascript-plain" id="javascript"></i>
                     </div>
                     <div class="mt-3">
-                      <a href="https://two-bridal.herokuapp.com/" target="_blank" rel="noreferrer" class="button-green">App</a>
-                      <a href="https://github.com/angrysun/two-bridal" target="_blank" rel="noreferrer"
+                      <a href="https://my-japan-travel-journal.herokuapp.com" target="_blank" rel="noreferrer" class="button-green">App</a>
+                      <a href="https://github.com/angrysun/my-travel-journal" target="_blank" rel="noreferrer"
                         class="button-green">Code</a>
                     </div>
                   </div>
