--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
           </div>
           <div id="element2">
             <span>
-              <h1>Steven Vasquez</h1>
+              <h1 class="title-name">Steven Vasquez</h1>
               <h2>Fullstack Developer</h2>
-              <h2 class="pb-3">Ruby on Rails | JavaScript</h2>
+              <h2 class="pb-3">Ruby on Rails | React | JavaScript</h2>
             </span>
             <div id="element3">
               <a href="stevenvasquezCV.pdf" target="_blank" rel="noreferrer" class="button-green">My resume</a>
             </div>
           </div>
         </div>
-      </div>
+      </div>m
       <div class="card text-center shadow-sm w-100" data-aos="fade-up">
         <div class="card-body">
           <h3 class="card-title">A little about me</h3>
