--- a/index.html
+++ b/index.html
@@ -81,18 +81,15 @@
                 <div class="col-xl-6 border-end">
                   <div class="card-body">
                     <h4 class="card-title">My Japan Travel Journal</h4>
-                    <p class="card-text">Marketplace app for renting used designer wedding dresses. Routinely deployed and
-                      debugged 2Bridal on Heroku. Used
-                      JavaScript and AJAX to create a search bar that shows the correct data without a page reload. Utilizes the
-                      JS plugin flatpickr so renters can see a clickable calendar to easily choose a start and end date for their
-                      rented dress.
-                      Created a function to calculate the cost of a dress from its rental period.</p>
+                    <p class="card-text">React app that details the places I have visited in Japan.
+
+                    </p>
                     <h5>Built with:</h5>
                     <div id="devcon" data-aos="zoom-in">
                       <i class="devicon-react-original-wordmark" id="react"></i>
-                      <i class="devicon-postgresql-plain-wordmark" id="postgres"></i>
-                      <i class="devicon-heroku-original-wordmark" id="heroku"></i>
                       <i class="devicon-javascript-plain" id="javascript"></i>
+                      <i class="devicon-css3-plain-wordmark" id="css"></i>
+                      <i class="devicon-heroku-original-wordmark" id="heroku"></i>
                     </div>
                     <div class="mt-3">
                       <a href="https://my-japan-travel-journal.herokuapp.com" target="_blank" rel="noreferrer" class="button-green">App</a>
@@ -113,13 +110,13 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="assets/images/2bridal.png" class="d-block w-100" alt="2bridal">
+                        <img src="assets/images/my-japan-travel.png" class="d-block w-100" alt="2bridal">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/2bridal3.png" class="d-block w-100" alt="2bridal3">
+                        <img src="assets/images/my-japan-travel-2.png" class="d-block w-100" alt="2bridal3">
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/images/2bridal4.png" class="d-block w-100" alt="2bridal4">
+                        <img src="assets/images/my-japan-travel-3.png" class="d-block w-100" alt="2bridal4">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsTwo"
