added in final details for fourth project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
           </div>
         </div>
-      </div>m
+      </div>
       <div class="card text-center shadow-sm w-100" data-aos="fade-up">
         <div class="card-body">
           <h3 class="card-title">A little about me</h3>
@@ -81,8 +81,10 @@
                 <div class="col-xl-6 border-end">
                   <div class="card-body">
                     <h4 class="card-title">My Japan Travel Journal</h4>
-                    <p class="card-text">React app that details the places I have visited in Japan.
-
+                    <p class="card-text">A React app that details the places I have visited in Japan.
+                    Made use of React's props to send data stored in a file into dynamic content on the webpage.
+                    With React's useState and useEffect Hooks, I built a functioning dark mode toggle that loads automatically based on the
+                    browser's initial mode preference and can be manually toggled to light/dark mode based on personal preference.
                     </p>
                     <h5>Built with:</h5>
                     <div id="devcon" data-aos="zoom-in">
@@ -109,13 +111,13 @@
                         aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div class="carousel-item active" data-bs-interval="6000">
                         <img src="assets/images/my-japan-travel.png" class="d-block w-100" alt="2bridal">
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-bs-interval="6000">
                         <img src="assets/images/my-japan-travel-2.png" class="d-block w-100" alt="2bridal3">
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-bs-interval="6000">
                         <img src="assets/images/my-japan-travel-3.png" class="d-block w-100" alt="2bridal4">
                       </div>
                     </div>
@@ -223,13 +225,13 @@
                         aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
+                      <div class="carousel-item active" data-bs-interval="6000">
                         <img src="assets/images/2bridal.png" class="d-block w-100" alt="2bridal">
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-bs-interval="6000">
                         <img src="assets/images/2bridal3.png" class="d-block w-100" alt="2bridal3">
                       </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item" data-bs-interval="6000">
                         <img src="assets/images/2bridal4.png" class="d-block w-100" alt="2bridal4">
                       </div>
                     </div>
