--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <span>
               <h1 class="title-name">Steven Vasquez</h1>
               <h2>Fullstack Developer</h2>
-              <h2 class="pb-3">Ruby on Rails | React | JavaScript</h2>
+              <h2 class="pb-3">Ruby on Rails | React | React Native</h2>
             </span>
             <div id="element3">
               <a href="stevenvasquezCV.pdf" target="_blank" rel="noreferrer" class="button-green">My resume</a>
